# m2-eu-budgeter

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: windows-build.yml
docs/: architecture-final.md  architecture.md  business-rules.md  calculation-engine.md  deployment-guide.md  developer-guide.md  development-plan.md  domain-model.md  excel-analysis.md  future-extensions.md  input-catalog.md  project-overview.md  user-manual.md  ux-design.md
scripts/: generate-latest-json.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/eu_travel_rates/: v_2024_07_31_to_2025_05_12.json  v_before_2024_07_31.json  v_from_2025_05_13.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/calculation/: budget_aggregator.rs  budget_summary.rs  cfs_checker.rs  equipment_depreciation.rs  mod.rs  personnel_cost.rs  salary_projection.rs  trip_cost.rs  wp_budget.rs
src-tauri/src/commands/: equipment.rs  mod.rs  other_costs.rs  personnel.rs  project.rs  travel.rs
src-tauri/src/domain/: dto.rs  entities.rs  mod.rs  rate_data.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/validation/: mod.rs
src-tauri/tests/: integration_test.rs
src/__tests__/: setup.ts  store.test.ts  validators.test.ts
src/components/: BudgetRingChart.tsx  BudgetWpBarChart.tsx  BudgetYearBarChart.tsx  CFSModal.tsx  CategoryTotalsPanel.tsx  EmptyStateCard.tsx  EquipmentCard.tsx  FormField.tsx  RoleCard.tsx  (+6 more)
(+21 files in other folders)
